# swmr-testapp

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  Log4cxxConfig.xml  README.md  SConstruct  swmr_log_conf.xml
cmake/: FindAprUtil.cmake  FindLog4CXX.cmake
hdf5swmr/include/: H5Ppublic.h  H5pubconf.h  H5public.h
hdf5swmr/lib/: libhdf5.la  libhdf5.settings  libhdf5.so.6  libhdf5_hl.la  libhdf5_hl.so.6  libhdf5_hl.so.6.0.168
hdf5swmr/share/hdf5_examples/c/: run-c-ex.sh
hdf5swmr/share/hdf5_examples/hl/c/: run-hlc-ex.sh
src/: CMakeLists.txt  Makefile  frame.cpp  frame.h  progressbar.h  swmr-demo.cpp  swmr-reader-app.cpp  swmr-reader.cpp  swmr-reader.h  swmr-testapp.cpp  swmr-testdata.h  swmr-writer.cpp  swmr-writer.h  timestamp.cpp  timestamp.h
